--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Bebas Neue';
-  src: url('./BebasNeue-Regular.woff2') format('woff2');
+  src: url('./BebasNeueRegular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
