--- a/styles/index.css
+++ b/styles/index.css
@@ -1,27 +1,56 @@
 body {
   font-family: 'Noto Sans', sans-serif;
   font-size: 16px;
+  background-color: #292d33;
+
+}
+
+.container {
+  max-width: 1440px;
+  margin-inline: auto;
+}
+
+.header {
+  min-height: 100vh;
+}
+
+.header__image {
+  position: relative;
+  background: url('../images/header-bg.jpg') center / cover no-repeat;
+  height: 100%;
+}
+
+.header__image::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-color: rgba(41, 45, 51, 0.6);
+  opacity: 0.6;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 
 .header__navbar {
+  position: relative;
+  z-index: 1;
   display: flex;
   height: 94px;
   align-items: center;
-  /* padding-block: 25px 24px; */
   column-gap: 50px;
-  background-color: gray;
   color: #fff;
+  border-bottom: 1px solid rgba(235, 235, 240, 0.2);
 }
 
 .header__logo {
-    padding: 25px 50px;
-    outline: 1px solid rgba(235, 235, 240, 0.2);
+  padding: 25px 50px;
+  border-right: 1px solid rgba(235, 235, 240, 0.2);
+  height: 100%;
 }
 
 .header__navigation-list {
   display: flex;
   column-gap: 50px;
-  padding-inline: 50px;
   flex-basis: 100%;
 }
 
@@ -50,20 +79,74 @@ body {
 }
 
 .button {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
   border: none;
-  background-color: #3a71d1;
+  background-color: #5c8ee5;
   color: inherit;
   font-size: 16px;
   line-height: 1.6;
   padding: 25px 60px;
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer;
 }
 
 .header__button {
-    height: 100% ;
+  height: 100%;
 }
 
+.seporator {
+  width: 150px;
+  height: 2px;
+  background-color: #5c8ee5;
+}
 
+.header__content {
+  position: relative;
+  z-index: 1;
+  padding-top: 150px;
+  color: #fff;
+  margin-bottom: 100px;
+}
+
+.header__title {
+  max-width: 1080px;
+  font-family: 'Bebas Neue';
+  font-weight: 400;
+  font-size: 80px;
+  line-height: 1.2;
+  margin-block: 30px;
+}
+
+.header__text {
+  max-width: 720px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  margin-bottom: 14px;
+}
+
+.header__features-list {
+  display: flex;
+  position: relative;
+  z-index: 1;
+  color: #fff;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+.header__features-item {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  padding: 30px 50px;
+  border: 1px solid rgba(235, 235, 240, 0.2);
+}
+
+.header__features-item:not(:last-child) {
+    border-right: none;
+}
