--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,7 @@
 body {
   font-family: 'Noto Sans', sans-serif;
   font-size: 16px;
-  background-color: #292d33;
-
+  /* overflow: hidden; */
 }
 
 .container {
@@ -12,6 +11,7 @@ body {
 
 .header {
   min-height: 100vh;
+  background-color: #292d33;
 }
 
 .header__image {
@@ -32,14 +32,21 @@ body {
 }
 
 .header__navbar {
-  position: relative;
-  z-index: 1;
+  position: fixed;
+  z-index: 2;
+  width: 100%;
   display: flex;
   height: 94px;
   align-items: center;
   column-gap: 50px;
   color: #fff;
   border-bottom: 1px solid rgba(235, 235, 240, 0.2);
+  transition: background-color 0.3s;
+}
+
+.header__navbar--light {
+  background-color: #fff;
+  color: #292d33;
 }
 
 .header__logo {
@@ -148,5 +155,85 @@ body {
 }
 
 .header__features-item:not(:last-child) {
-    border-right: none;
+  border-right: none;
+}
+
+.section--light {
+  background-color: #fff;
+}
+
+.section {
+  margin-block: 150px;
+}
+
+.section__title {
+  font-family: 'Bebas Neue';
+  font-weight: 400;
+  font-size: 60px;
+  line-height: 1.2;
+  color: #292d33;
+  margin-block: 30px 50px;
+}
+
+.steps__title {
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 1.6;
+  margin-bottom: 10px;
+  color: #292d33;
+}
+
+.steps__list {
+  display: flex;
+  column-gap: 30px;
+  list-style: none;
+}
+
+.steps__item {
+  max-width: 330px;
+}
+
+.steps__num {
+  display: flex;
+  align-items: center;
+  column-gap: 30px;
+  /* position: relative; */
+  /* display: inline-block; */
+  margin-bottom: 30px;
+  font-family: 'Bebas Neue';
+  font-size: 48px;
+  line-height: 1.2;
+  color: #5c8ee5;
+}
+
+.steps__num::after {
+  content: '';
+  width: 100%;
+  height: 1px;
+  background-color: #ebebf0;
+}
+
+.steps__text {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #828a99;
+  margin-bottom: 20px;
+}
+
+.steps__link {
+  display: flex;
+  align-items: center;
+  column-gap: 30px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  color: #5c8ee5;
+  line-height: 1.6;
+}
+
+.steps__link::before {
+  content: '';
+  width: 12%;
+  height: 1px;
+  background-color: #5c8ee5;
 }
