--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -93,18 +93,18 @@ button {
   font: inherit;
 }
 
-/* html { */
+html {
   /**
      Пригодится в большинстве ситуаций
      (когда, например, нужно будет "прижать" футер к низу сайта)
     */
-  /* height: 100%; */
+  height: 100%;
   /**
      Убираем скачок интерфейса по горизонтали
      при появлении / исчезновении скроллбара
     */
   /* scrollbar-gutter: stable; */
-/* } */
+}
 
 /**
    Плавный скролл
