--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Noto Sans', sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .container {
@@ -39,8 +39,9 @@ body {
   align-items: center;
   column-gap: 50px;
   color: #fff;
-  border-bottom: 1px solid rgba(235, 235, 240, 0.2);
+  border-bottom: 0.0625rem solid rgba(235, 235, 240, 0.2);
   transition: background-color 0.3s, height 0.3s;
+  flex-wrap: nowrap;
 }
 
 .header__navbar--light {
@@ -58,14 +59,17 @@ body {
   display: flex;
   align-items: center;
   padding-inline: 50px;
-  border-right: 1px solid rgba(235, 235, 240, 0.2);
+  border-right: 0.0625rem solid rgba(235, 235, 240, 0.2);
   height: 100%;
 }
 
 .header__navigation-list {
   display: flex;
-  column-gap: 53px;
+
+  column-gap: clamp(1.0625rem, -2.6875rem + 5vw, 3.3125rem);
+  /* column-gap: 53px; */
   flex-basis: 100%;
+  flex-wrap: nowrap;
 }
 
 .header__navigation-link {
@@ -102,11 +106,11 @@ body {
   color: inherit;
   font-size: 16px;
   line-height: 1.6;
-  padding: 25px 50px;
+  padding: 1.5625rem 3.125rem;
   text-decoration: none;
   color: #fff;
   cursor: pointer;
-  letter-spacing: 0.7px;
+  letter-spacing: 0.0437rem;
 }
 
 .header__nav-button {
@@ -115,12 +119,12 @@ body {
 
 .header__button {
   padding: 25px 60px;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.0313rem;
 }
 
 .seporator {
   width: 150px;
-  height: 2px;
+  height: 0.125rem;
   background-color: #5c8ee5;
 }
 
@@ -147,7 +151,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   margin-bottom: 50px;
-  word-spacing: 1.2px;
+  word-spacing: 0.075rem;
 }
 
 .header__features-list {
@@ -165,7 +169,7 @@ body {
   flex-direction: column;
   row-gap: 20px;
   padding: 30px 50px;
-  border: 1px solid rgba(235, 235, 240, 0.2);
+  border: 0.0625rem solid rgba(235, 235, 240, 0.2);
   max-width: 288px;
 }
 
@@ -193,9 +197,9 @@ body {
 
 .steps__title {
   font-weight: 400;
-  font-size: 28px;
+  font-size: 1.75rem;
   line-height: 1.6;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
   color: #292d33;
 }
 
@@ -206,20 +210,20 @@ body {
 }
 
 .steps__item {
-  max-width: 330px;
+  max-width: 20.625rem;
 }
 
 .steps__content {
-   padding-right: 32px;
+  padding-right: 2rem;
 }
 
 .steps__num {
   display: flex;
   align-items: center;
   column-gap: 30px;
-  margin-bottom: 36px;
+  margin-bottom: 2.25rem;
   font-family: 'Bebas Neue';
-  font-size: 48px;
+  font-size: 3rem;
   line-height: 1.2;
   color: #5c8ee5;
 }
@@ -227,15 +231,15 @@ body {
 .steps__num::after {
   content: '';
   width: 100%;
-  height: 1px;
+  height: 0.0625rem;
   background-color: #ebebf0;
 }
 
 .steps__text {
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.6;
   color: #828a99;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .steps__link {
@@ -244,7 +248,7 @@ body {
   column-gap: 24px;
   text-decoration: none;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1rem;
   color: #5c8ee5;
   line-height: 1.6;
 }
@@ -252,6 +256,32 @@ body {
 .steps__link::before {
   content: '';
   width: 12%;
-  height: 1px;
+  height: 0.0625rem;
   background-color: #5c8ee5;
+}
+
+@media (max-width: 106.25rem) {
+  html {
+    font-size: 0.875rem;
+  }
+
+  .header__logo {
+    padding-inline: 1.875rem;
+  }
+
+  .header__navbar {
+    column-gap: 20px;
+  }
+
+  .header__navigation-list {
+    align-items: center;
+  }
+
+  .header__nav-button {
+    padding: 0.9375rem 2.1875rem;
+  }
+
+  .header__content {
+    padding-inline: 0.625rem;
+  }
 }
