--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -141,7 +141,7 @@ label {
   cursor: pointer;
 }
 
-/**
+/* *
    Приводим к единому цвету svg-элементы
    (за исключением тех, у которых уже указан
    атрибут fill со значением 'none' или начинается с 'url')
@@ -150,8 +150,7 @@ label {
   fill: currentColor;
 } */
 
-/**
-   Приводим к единому цвету svg-элементы
+/* Приводим к единому цвету svg-элементы
    (за исключением тех, у которых уже указан
    атрибут stroke со значением 'none')
   */
@@ -188,5 +187,3 @@ svg * {
     scroll-behavior: auto !important;
   }
 }
-
-
