--- a/styles/index.css
+++ b/styles/index.css
@@ -113,11 +113,12 @@ body {
   color: inherit;
   font-size: 1rem;
   line-height: 1.6;
-  padding: 25px 50px;
+  padding: 25px 42px;
   text-decoration: none;
   color: #fff;
   cursor: pointer;
-  letter-spacing: 0.6992px;
+  font-weight: 600;
+  /* letter-spacing: 0.6992px; */
 }
 
 .header__nav-button {
@@ -125,14 +126,14 @@ body {
 }
 
 .header__button {
-  padding: 1.5625rem 3.75rem;
+  padding: 25px 56px;
   letter-spacing: 0.5008px;
 }
 
 .burger-button {
   width: 100px;
   height: 100%;
-  gap: 15px;
+  gap: 0.9375rem;
   display: none;
   justify-content: space-between;
   flex-direction: column;
@@ -188,8 +189,6 @@ body {
 }
 
 .header__features-list {
-  display: flex;
-  justify-content: center;
   position: relative;
   z-index: 1;
   color: #fff;
@@ -198,13 +197,39 @@ body {
   line-height: 1.6;
 }
 
+.swiper {
+  max-width: 1440px;
+  margin-inline: auto;
+}
+
+.swiper-wrapper {
+  display: flex;
+}
+
 .header__features-item {
   display: flex;
   flex-direction: column;
   row-gap: 1.25rem;
-  padding: 1.875rem 3.125rem;
+  padding: 30px 50px;
   border: 1px solid rgba(235, 235, 240, 0.2);
-  max-width: 18rem;
+  max-width: 288px;
+  height: auto;
+}
+
+.slider__buttons {
+  display: none;
+  height: 44px;
+}
+
+.slider-button-prev,
+.slider-button-next {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  flex-basis: 50%;
+  border: 1px solid rgba(235, 235, 240, 0.2);
+  cursor: pointer;
 }
 
 .header__features-item:not(:last-child) {
@@ -241,6 +266,8 @@ body {
   display: flex;
   column-gap: 1.875rem;
   list-style: none;
+  /* потом убрать */
+  overflow: hidden;
 }
 
 .steps__item {
@@ -296,147 +323,6 @@ body {
 
 .mobile__overlay {
   display: none;
-  /* position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 75rem;
-  z-index: 9;
-  background-color: #fff; */
-}
-
-/* .mobile__menu-list {
-
-}
-
-.mobile__menu-item {
-
-} */
-
-@media (max-width: 106.25rem) {
-  html {
-    font-size: 0.875rem;
-  }
-
-  .header__logo {
-    padding-inline: 30px;
-  }
-
-  .header__navbar {
-    column-gap: 1.25rem;
-  }
-
-  .header__navigation-list {
-    align-items: center;
-  }
-
-  .header__nav-button {
-    padding: 15px 35px;
-  }
-}
-
-@media (max-width: 91.25rem) {
-  html {
-    font-size: 0.8125rem;
-  }
-
-  .header__logo {
-    padding-inline: 1.25rem;
-  }
-
-  .logo__svg {
-    width: 7.5rem;
-    height: 2.75rem;
-  }
-}
-
-@media (max-width: 1200px) {
-  .header__contacts {
-    display: none;
-  }
-
-  .header__navbar {
-    height: 80px;
-  }
-
-  .header__nav-button {
-    padding: 2.5rem 1.9375rem;
-  }
-
-  .header__features-item {
-    padding: 1.25rem 2.5rem;
-  }
-}
-
-@media (max-width: 992px) {
-  html {
-    font-size: 12px;
-  }
-
-  .container {
-    max-width: calc(56.25rem + (0.9375rem * 2));
-  }
-
-  .header__navigation-list {
-    display: none;
-  }
-
-  .header__logo {
-    flex-grow: 1;
-    justify-content: center;
-  }
-
-  .burger-button {
-    display: inline-flex;
-  }
-
-  .header__navbar--light .burger-button__line {
-    background-color: #000;
-  }
-
-  .header__nav-button-text {
-    display: none;
-  }
-
-  .header__features-list {
-    overflow-y: hidden;
-  }
-
-  .header__logo {
-    border-right: none;
-  }
-
-  .header__nav-button .header__contacts-icon {
-    display: block;
-    color: #fff;
-  }
-
-  .mobile__overlay {
-    position: fixed;
-    padding-top: 7rem;
-    padding-inline: 15px;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    z-index: 2;
-    background-color: #fff;
-  }
-
-  .close-menu .burger-button__line:nth-child(2) {
-    display: none;
-  }
-
-  .close-menu .burger-button__line:nth-child(1) {
-   transform: rotate(45deg) translateY(24px);
-  }
-
-  .close-menu .burger-button__line:nth-child(3) {
-    transform: rotate(-45deg) translateY(-25px);
-  }
-
-  /* .section {
-    display: none;
-  } */
 }
 
 .mobile__overlay.is-open {
@@ -491,13 +377,12 @@ body.is-lock {
 
 .mobile__seporator {
   position: absolute;
-  top: 105%;
-  left: 50%;
+  top: 63%;
+  left: 0;
   width: 100%;
   margin: 0;
   height: 0.0625rem;
   background: #ebebf0;
-  transform: translateX(-50%);
   pointer-events: none;
 }
 
@@ -528,4 +413,149 @@ body.is-lock {
 .footer__soc1als {
   display: flex;
   column-gap: 15px;
+}
+
+/* .mobile__menu-list {
+
+}
+
+.mobile__menu-item {
+
+} */
+
+@media (max-width: 1700px) {
+  html {
+    font-size: 0.875rem;
+  }
+
+  .header__logo {
+    padding-inline: 30px;
+  }
+
+  .header__navbar {
+    column-gap: 1.25rem;
+  }
+
+  .header__navigation-list {
+    align-items: center;
+  }
+
+  .header__nav-button {
+    padding: 15px 35px;
+  }
+}
+
+@media (max-width: 91.25rem) {
+  html {
+    font-size: 0.8125rem;
+  }
+
+  .header__logo {
+    padding-inline: 1.25rem;
+  }
+
+  .logo__svg {
+    width: 7.5rem;
+    height: 2.75rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .header__contacts {
+    display: none;
+  }
+
+  .header__navbar {
+    height: 80px;
+  }
+
+  .header__nav-button {
+    padding: 2.5rem 1.9375rem;
+  }
+
+  .header__features-item {
+    padding: 1.25rem 3.75rem;
+  }
+
+  .slider__buttons {
+    display: flex;
+  }
+}
+
+@media (max-width: 992px) {
+  html {
+    font-size: 12px;
+  }
+
+  .container {
+    max-width: calc(56.25rem + (0.9375rem * 2));
+  }
+
+  .header__navigation-list {
+    display: none;
+  }
+
+  .header__logo {
+    flex-grow: 1;
+    justify-content: center;
+  }
+
+  .burger-button {
+    display: inline-flex;
+  }
+
+  .header__navbar--light .burger-button__line {
+    background-color: #000;
+  }
+
+  .header__nav-button-text {
+    display: none;
+  }
+
+  .header__logo {
+    border-right: none;
+  }
+
+  .header__nav-button .header__contacts-icon {
+    display: block;
+    color: #fff;
+  }
+
+  .mobile__overlay {
+    position: fixed;
+    padding-top: 7rem;
+    padding-inline: 15px;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    z-index: 2;
+    background-color: #fff;
+  }
+
+  .close-menu .burger-button__line:nth-child(2) {
+    display: none;
+  }
+
+  .close-menu .burger-button__line:nth-child(1) {
+    transform: rotate(45deg) translateY(24px);
+  }
+
+  .close-menu .burger-button__line:nth-child(3) {
+    transform: rotate(-45deg) translateY(-25px);
+  }
+
+  /* .section {
+    display: none;
+  } */
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: calc(40rem + (0.9375rem * 2));
+  }
+
+  .header__content {
+    padding-top: 12.1875rem;
+  }
 }
