--- a/styles/index.css
+++ b/styles/index.css
@@ -8,13 +8,14 @@ body {
 }
 
 .container {
-  max-width: calc(1440px + (15px * 2));
+  max-width: 1440px;
   margin-inline: auto;
 }
 
 .header {
   min-height: 100vh;
   background-color: #292d33;
+  margin-block-end: 150px;
 }
 
 .header__image {
@@ -72,12 +73,42 @@ body {
   column-gap: clamp(17px, -43px + 5vw, 53px);
   flex-basis: 100%;
   flex-wrap: nowrap;
+  height: 100%;
+  align-items: center;
+}
+
+.header__navigation-item {
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .header__navigation-link {
+  display: flex;
+  align-items: center;
+  position: relative;
   text-decoration: none;
   color: inherit;
   white-space: nowrap;
+  height: 100%;
+}
+
+.header__navigation-link::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 1px;
+  background-color: #5c8ee6;
+  bottom: 0;
+  right: 0;
+  left: auto;
+  transition: 0.3s;
+}
+
+.header__navigation-link:hover::after {
+  width: 100%;
+  right: auto;
+  left: 0;
 }
 
 .header__contacts {
@@ -119,7 +150,6 @@ body {
   color: #fff;
   cursor: pointer;
   font-weight: 600;
-  /* letter-spacing: 0.6992px; */
 }
 
 .header__nav-button {
@@ -168,6 +198,7 @@ body {
 .separator {
   width: 9.375rem;
   height: 2px;
+  margin-block-end: 23px;
   background-color: #5c8ee5;
 }
 
@@ -177,7 +208,7 @@ body {
   padding-top: 15.1875rem;
   color: #fff;
   margin-bottom: 6.25rem;
-  padding-inline: 0.9375rem;
+  padding-inline: 0;
 }
 
 .header__title {
@@ -186,7 +217,7 @@ body {
   font-weight: 400;
   font-size: clamp(3rem, 2.5146rem + 2.0712vw, 5rem);
   line-height: 1.2;
-  margin-block: 1.4375rem 2.4375rem;
+  margin-block-end: 2.4375rem;
 }
 
 .header__text {
@@ -252,11 +283,7 @@ body {
 
 .section {
   padding-inline: 15px;
-  margin-block: 9.375rem;
-}
-
-.steps__inner {
-  padding-inline: 15px;
+  margin-block-end: 148px;
 }
 
 .section__title {
@@ -265,7 +292,7 @@ body {
   font-size: 60px;
   line-height: 1.2;
   color: #292d33;
-  margin-block: 1.5rem 3.125rem;
+  margin-block-end: 54px;
 }
 
 .steps__title {
@@ -313,7 +340,10 @@ body {
   font-size: 16px;
   line-height: 1.6;
   color: #828a99;
-  margin-bottom: 20px;
+}
+
+.steps__link {
+  margin-top: 20px;
 }
 
 .steps__link {
@@ -329,9 +359,14 @@ body {
 
 .steps__link::before {
   content: '';
-  width: 12%;
+  width: 40px;
   height: 1px;
   background-color: #5c8ee5;
+  transition: width 0.3s;
+}
+
+.steps__link:hover::before {
+  width: 60px;
 }
 
 .mobile__overlay {
@@ -351,15 +386,12 @@ body.is-lock {
   font-size: 14px;
   line-height: 1.6;
   color: #292d33;
+  margin-bottom: 30px;
 }
 
 .mobile__menu-link {
   color: inherit;
   text-decoration: none;
-}
-
-.mobile__menu-item {
-  margin-bottom: 30px;
 }
 
 .mobile__submenu-list {
@@ -389,13 +421,11 @@ body.is-lock {
 }
 
 .mobile__separator {
-  position: absolute;
-  top: 59%;
-  left: 0;
   width: 100%;
   margin: 0;
+  margin-bottom: 30px;
   height: 0.0625rem;
-  background: #ebebf0;
+  border-top: 1px solid #ebebf0;
   pointer-events: none;
 }
 
@@ -442,6 +472,84 @@ body.is-lock {
   background-color: #5c8ee5;
 }
 
+.card__list {
+  display: flex;
+  flex-wrap: wrap;
+  /* display: grid;
+  grid-template-columns: repeat(3, 1fr); */
+}
+
+.card__item {
+  display: flex;
+  border: 1px solid #ebebf0;
+  line-height: 1.6;
+  font-weight: 400;
+  transition: border 0.3s;
+}
+
+.card__item--product {
+  flex-direction: column;
+  row-gap: 46px;
+  justify-content: space-between;
+  /* flex-basis: 33%; */
+  /* width: 480px; */
+  flex: 0 0 calc(100% / 3);
+}
+
+.card__item--brands {
+  column-gap: 40px;
+  padding: 50px 58px 54px 34px;
+  flex: 0 0 calc(100% / 2);
+}
+
+.card__item:hover {
+  border: 1px solid #5c8ee5;
+}
+
+.card__item:hover .card__title {
+  color: #5c8ee5;
+}
+
+.card__body {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  padding: 40px 90px 50px 50px;
+}
+
+.card__body--brands {
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
+}
+
+.card__title {
+  font-size: 28px;
+  /* font-size: clamp(1.67rem, 0.8252rem + 1.8123vw, 3rem); */
+  color: #292d33;
+  font-weight: 400;
+  transition: color 0.3s;
+}
+
+.card__description {
+  font-size: 16px;
+  color: #828a99;
+}
+
+.card__image {
+  align-self: flex-end;
+}
+
+.hhh {
+  color: #828a99;
+  width: 100%;
+  height: 100%;
+}
+
+.hhh:hover {
+  color: #5c8ee6;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 0.875rem;
@@ -473,9 +581,17 @@ body.is-lock {
     padding-inline: 1.25rem;
   }
 
+  .header__content {
+    padding-inline: 1.5625rem;
+  }
+
   .logo__svg {
     width: 7.5rem;
     height: 2.75rem;
+  }
+
+  .card__title {
+    font-size: 26px;
   }
 }
 
@@ -499,6 +615,10 @@ body.is-lock {
   .slider__buttons {
     display: flex;
   }
+
+  .card__item {
+    flex: 0 0 calc(100% / 2);
+  }
 }
 
 @media (max-width: 992px) {
@@ -506,8 +626,12 @@ body.is-lock {
     font-size: 12px;
   }
 
+  .header {
+    margin-block-end: 100px;
+  }
+
   .container {
-    max-width: calc(56.25rem + (0.9375rem * 2));
+    max-width: 900px;
   }
 
   .header__navigation-list {
@@ -540,13 +664,18 @@ body.is-lock {
   .mobile__overlay {
     position: fixed;
     padding-top: 7rem;
-    padding-inline: 15px;
+
     inset: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
     z-index: 2;
     background-color: #fff;
+  }
+
+  .mobile__menu-inner,
+  .mobile__menu-footer {
+    padding-inline: 15px;
   }
 
   .close-menu .burger-button__line:nth-child(2) {
@@ -563,7 +692,7 @@ body.is-lock {
 
   .section__title {
     font-size: 36px;
-    margin-block: 1.3rem 2.5rem;
+    margin-block-end: 2.7rem;
   }
 
   .section {
@@ -604,15 +733,20 @@ body.is-lock {
   .steps__num::after {
     width: 70%;
   }
+
+  .card__body {
+    padding: 18px 46px 50px 28px;
+    row-gap: 6px;
+  }
 }
 
 @media (max-width: 768px) {
   .container {
-    max-width: calc(40rem + (0.9375rem * 2));
+    max-width: 640px;
   }
 
   .header__content {
-    padding-top: 12.1875rem;
+    padding-top: 195px;
   }
 
   .header__text {
@@ -636,7 +770,34 @@ body.is-lock {
   .header__features-text {
     font-size: 14px;
   }
+
+  .card__item {
+    flex: 0 0 100%;
+  }
+
+  .card__item--product {
+    row-gap: 0;
+    min-height: 429px;
+  }
+
+  .card__body {
+    padding: 18px 46px 50px 28px;
+    row-gap: 6px;
+  }
+
+  .card__title {
+    font-size: 20px;
+  }
+
+  .separator {
+    margin-block-end: 15px;
+  }
+
+  .card__description {
+    font-size: 14px;
+  }
 }
+
 @media (max-width: 575px) {
   .header__navbar {
     height: 68px;
@@ -644,7 +805,7 @@ body.is-lock {
   .header__title {
     max-width: 200px;
     font-size: 48px;
-    margin-block: 1.1rem 1.4rem;
+    margin-block-end: 1.2rem;
   }
 
   .header__nav-button {
@@ -679,7 +840,7 @@ body.is-lock {
 
   .header__content {
     padding-top: 9.9rem;
-    padding-inline: 1.25rem;
+    padding-inline: 15px;
     margin-bottom: 4.25rem;
   }
 
