--- a/styles/index.css
+++ b/styles/index.css
@@ -890,6 +890,6 @@ body.is-lock {
   .card__logo {
     /* align-self: center;
     justify-self: start; */
-    place-self: center start; /* align-self / justify-self */
+    place-self: center start;
   }
 }
