--- a/styles/index.css
+++ b/styles/index.css
@@ -347,7 +347,7 @@ button:hover {
 }
 
 .button__link--steps {
-      margin-block-start: 1.25rem
+  margin-block-start: 1.25rem;
 }
 
 .button__link {
@@ -510,6 +510,7 @@ body.is-lock {
 
 .card__logo {
   width: 100%;
+  color: #828a99;
   grid-area: logo;
 }
 
@@ -550,13 +551,11 @@ body.is-lock {
   align-self: flex-end;
 }
 
-.card__logo {
-  color: #828a99;
-}
-
 .founder {
   position: relative;
   padding-inline: 0;
+  /* padding-block-end: 54px; */
+  min-height: 41.25rem;
 }
 
 .founder__photo {
@@ -564,7 +563,11 @@ body.is-lock {
   top: 0;
   left: 0;
   width: 44%;
+  /* min-height: 41.25rem; */
+  height: 100%;
+  object-fit: contain;
 }
+
 .founder__content-wrapper {
   display: flex;
   justify-content: flex-end;
@@ -577,9 +580,8 @@ body.is-lock {
 }
 
 .button__link--founder {
-   margin-block-start: 1.2rem;
+  margin-block-start: 1.2rem;
 }
-
 
 .founder__title {
   margin-block-end: 1.625rem;
@@ -592,6 +594,59 @@ body.is-lock {
   color: #828a99;
   margin-bottom: 1.7rem;
   word-spacing: 0.125rem;
+}
+
+.clients__wrapper {
+  display: flex;
+  /* column-gap: 3.125rem; */
+}
+
+.clients__content {
+  flex-basis: 50%;
+}
+
+.clients__title {
+  margin-block-end: 2.875rem;
+}
+
+.clients__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  grid-auto-flow: column;
+  row-gap: 1.25rem;
+  column-gap: 0.375rem;
+}
+
+.clients__item {
+  display: flex;
+  align-items: center;
+  column-gap: 1.25rem;
+}
+
+.clients__text {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  color: var(--txt);
+}
+
+.clients__iconnns {
+  flex-basis: 50%;
+}
+
+.clients-logo__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  flex-basis: 50%;
+}
+
+.clients-logo__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem 5.3125rem;
 }
 
 @media (max-width: 1700px) {
@@ -667,6 +722,10 @@ body.is-lock {
   .card__item--brands {
     column-gap: 1.5625rem;
     padding: 2.1875rem 1.75rem 2.1875rem 1.5625rem;
+  }
+
+  .founder {
+    padding-block-end: 0;
   }
 
   .founder__content {
@@ -777,7 +836,7 @@ body.is-lock {
     column-gap: 2.3rem;
     font-size: 14px;
   }
-    .button__link--steps {
+  .button__link--steps {
     margin-block-end: 20px;
   }
 
@@ -846,11 +905,6 @@ body.is-lock {
     min-height: 429px;
   }
 
-  .card__body {
-    padding: 18px 46px 50px 28px;
-    row-gap: 6px;
-  }
-
   .card__title {
     font-size: 20px;
   }
@@ -868,8 +922,8 @@ body.is-lock {
   }
 
   .founder__content-wrapper {
-justify-content: center;
-}
+    justify-content: center;
+  }
 
   .founder__content {
     padding-inline: 1.25rem;
