--- a/styles/index.css
+++ b/styles/index.css
@@ -598,7 +598,7 @@ body.is-lock {
 
 .clients__wrapper {
   display: flex;
-  /* column-gap: 3.125rem; */
+  column-gap: 0;
 }
 
 .clients__content {
@@ -640,13 +640,25 @@ body.is-lock {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   flex-basis: 50%;
+  grid-auto-rows: 10rem;
+  margin-block-start: 0.375rem;
 }
 
 .clients-logo__item {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 3rem 5.3125rem;
+  border: 1px solid #ebebf0;
+  padding: 1rem;
+}
+
+.clients-logo__image {
+  filter: grayscale(100%);
+  transition: 0.3s;
+}
+
+.clients-logo__item:hover .clients-logo__image {
+  filter: grayscale(0);
 }
 
 @media (max-width: 1700px) {
@@ -692,6 +704,10 @@ body.is-lock {
   .card__title {
     font-size: 26px;
   }
+
+  .clients__wrapper {
+    column-gap: 3rem;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -734,6 +750,11 @@ body.is-lock {
 
   .founder__photo {
     width: 40%;
+  }
+
+  .clients-logo__list {
+    align-self: center;
+    margin-block-start: 0;
   }
 }
 
@@ -863,6 +884,11 @@ body.is-lock {
   .card__item--brands {
     grid-template-columns: auto 1fr 1fr;
   }
+
+  .clients-logo__image {
+    width: 50px;
+    height: 50px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -944,6 +970,23 @@ body.is-lock {
     font-size: 14px;
     margin-bottom: 0.7rem;
   }
+
+  .clients__wrapper {
+    flex-direction: column;
+    row-gap: 2.8rem;
+  }
+
+  .clients-logo__list {
+    align-self: stretch;
+  }
+
+  .clients__item {
+    column-gap: 1.6rem;
+  }
+
+  .clients__text {
+    font-size: 14px;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1015,5 +1058,22 @@ body.is-lock {
 
   .card__logo {
     align-self: center;
+  }
+
+  .clients__list {
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+    row-gap: 1.25rem;
+    justify-items: start;
+  }
+
+  .clients-logo__list {
+    align-self: stretch;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 9.2rem;
+  }
+
+  .clients-logo__item:nth-child(9) {
+    display: none;
   }
 }
