--- a/styles/index.css
+++ b/styles/index.css
@@ -121,6 +121,10 @@ body {
   color: #5c8ee6;
 }
 
+.header__nav-button .header__contacts-icon {
+  display: none;
+}
+
 .header__contacts-link {
   color: inherit;
   text-decoration: none;
@@ -145,14 +149,15 @@ body {
   color: inherit;
   font-size: 1rem;
   line-height: 1.6;
-  padding: 25px 42px;
+  padding: 25px 54px;
   text-decoration: none;
   color: #fff;
   cursor: pointer;
   font-weight: 600;
+  transition: background-color 0.3s;
 }
 
-button:hover {
+.button:hover {
   background-color: #4a79cc;
 }
 
@@ -462,18 +467,30 @@ body.is-lock {
   column-gap: 15px;
 }
 
-.slider__steps-buttons {
+.nav-arrows {
   display: none;
   justify-content: end;
 }
 
-.slider__steps-button--prev,
-.slider__steps-button--next {
+.nav-arrows__button {
   display: flex;
   justify-content: center;
   align-content: center;
-  padding: 10px 15px;
   background-color: #5c8ee5;
+  border: none;
+}
+
+.nav-arrows__icon {
+  width: 36px;
+  height: 24px;
+}
+
+.nav-arrows__button--sm {
+  padding: 10px 15px;
+}
+
+.nav-arrows__button--lg {
+  padding: 1.125rem 1.375rem;
 }
 
 .card__list {
@@ -554,7 +571,6 @@ body.is-lock {
 .founder {
   position: relative;
   padding-inline: 0;
-  /* padding-block-end: 54px; */
   min-height: 41.25rem;
 }
 
@@ -563,7 +579,6 @@ body.is-lock {
   top: 0;
   left: 0;
   width: 44%;
-  /* min-height: 41.25rem; */
   height: 100%;
   object-fit: contain;
 }
@@ -659,6 +674,62 @@ body.is-lock {
 
 .clients-logo__item:hover .clients-logo__image {
   filter: grayscale(0);
+}
+
+.slider__blog-wrapper {
+  display: flex;
+}
+
+.blog-card__footer {
+  margin-block-start: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.blog-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 3.125rem;
+  position: relative;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #fff;
+  text-decoration: none;
+  min-height: 25rem;
+  row-gap: 0.625rem;
+}
+
+.blog-card__image {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -2;
+}
+
+.blog-card::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  background: rgba(41, 45, 51, 0.6);
+  z-index: -1;
+}
+
+.blog__title {
+  margin-block-end: 3.75rem;
+}
+
+.blog-card__title {
+  font-size: 28px;
+  font-weight: 400;
+}
+
+.blog-card__description {
+  font-size: 16px;
 }
 
 @media (max-width: 1700px) {
@@ -865,7 +936,7 @@ body.is-lock {
     margin-block-end: 14px;
   }
 
-  .slider__steps-buttons {
+  .nav-arrows {
     display: flex;
   }
   .steps__content {
@@ -918,6 +989,11 @@ body.is-lock {
     padding: 1.5rem 4rem;
     flex-shrink: 0;
   }
+
+  .nav-arrows__button--lg {
+    padding: 0.8125rem 1.2rem;
+  }
+
   .header__features-text {
     font-size: 14px;
   }
@@ -986,6 +1062,24 @@ body.is-lock {
 
   .clients__text {
     font-size: 14px;
+  }
+
+  .blog-card__title {
+    font-size: 20px;
+    line-height: 1.2;
+  }
+
+  .blog-card__description {
+    font-size: 14px;
+  }
+
+  .blog-card__footer {
+    margin-block-start: 1.6rem;
+  }
+
+  .nav-arrows__icon {
+    width: 30px;
+    height: 20px;
   }
 }
 
@@ -1075,5 +1169,14 @@ body.is-lock {
 
   .clients-logo__item:nth-child(9) {
     display: none;
+  }
+
+  .blog-card__description {
+    display: none;
+  }
+
+  .blog-card {
+    min-height: 16.1875rem;
+    padding: 1.7rem 1.9rem;
   }
 }
