--- a/styles/index.css
+++ b/styles/index.css
@@ -299,6 +299,10 @@ body {
   margin-block-end: 148px;
 }
 
+.section:last-child {
+  margin-block-end: 0;
+}
+
 .section__title {
   font-family: 'Bebas Neue';
   font-weight: 400;
@@ -425,37 +429,43 @@ body.is-lock {
   text-decoration: none;
 }
 
-.mobile__menu-phone {
-  font-family: var(--font-family);
+.contacts__phone {
   font-weight: 600;
   font-size: 20px;
   line-height: 1.6;
   color: #292d33;
 }
 
-.mobile__separator {
-  width: 100%;
+.divider-line {
   margin: 0;
-  margin-block-end: 30px;
+  width: 100%;
   height: 0.0625rem;
   border-top: 1px solid #ebebf0;
   pointer-events: none;
 }
 
-.mobile__menu-footer {
+.divider-line--mobile {
+  margin-block-end: 30px;
+}
+
+.divider-line--footer {
+  margin: 0;
+}
+
+.contacts--mobile {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
 }
 
-.mobile__menu-address {
+.contacts__list {
   display: flex;
   flex-direction: column;
   justify-content: center;
   row-gap: 10px;
 }
 
-.mobile__menu-address-link {
+.contacts__item {
   display: flex;
   column-gap: 10px;
   color: #292d33;
@@ -466,7 +476,7 @@ body.is-lock {
   line-height: 1.6;
 }
 
-.footer__soc1als {
+.socials--mobile {
   display: flex;
   column-gap: 15px;
 }
@@ -858,6 +868,132 @@ body.is-lock {
   padding-inline: 0.625rem;
 }
 
+.footer {
+  padding-inline: 15px;
+}
+
+.footer__top {
+  display: flex;
+  justify-content: space-between;
+  padding-block: 3.125rem;
+  align-items: center;
+}
+
+.logo__svg-footer {
+  display: block;
+}
+
+.footer__contacts {
+  display: flex;
+  column-gap: 5.5rem;
+  align-items: center;
+}
+
+.footer__address {
+  display: flex;
+  column-gap: 2.3rem;
+  align-items: center;
+}
+
+.footer__phone {
+  font-size: 2rem;
+  line-height: 1.6;
+  text-decoration: underline;
+  white-space: nowrap;
+}
+
+.footer__bottom {
+  display: flex;
+  padding-block: 3.125rem;
+  column-gap: 7rem;
+}
+
+.footer__text {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+.footer__menu-title {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.6;
+  margin-bottom: 1.875rem;
+}
+
+.footer__menu-wrapper:last-child {
+  margin-inline-start: 3.875rem;
+}
+
+.footer__menu-list {
+  display: grid;
+  column-gap: 8.4rem;
+  row-gap: 0.9375rem;
+  grid-auto-flow: column;
+  padding-left: 1.25rem;
+}
+
+.footer__menu-list--bold {
+  row-gap: 1.9rem;
+}
+
+.footer__menu-list--1col {
+  grid-template-columns: 1fr;
+  grid-auto-flow: row;
+}
+
+.footer__menu--2cols {
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: 1fr 1fr;
+}
+
+.footer__menu-link {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #828a99;
+  text-decoration: none;
+}
+
+.footer__menu-link--bold {
+  font-weight: 600;
+  font-size: 16px;
+  color: #292d33;
+}
+
+.footer__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-block: 1.2rem;
+}
+
+.footer__legal {
+  display: flex;
+  column-gap: 5.25rem;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.6;
+  color: #828a99;
+}
+
+.footer__policy {
+  text-decoration: none;
+  color: #828a99;
+}
+
+.footer__author {
+  display: flex;
+  align-items: center;
+  column-gap: 0.7rem;
+}
+
+.footer__made-in {
+  display: block;
+  color: #828a99;
+  font-size: 12px;
+  line-height: 1.6;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 0.875rem;
@@ -908,6 +1044,14 @@ body.is-lock {
 
   .cta__image {
     max-width: 40rem;
+  }
+
+  .footer__contacts {
+    column-gap: 1.5rem;
+  }
+
+  .footer__address {
+    column-gap: 1.3rem;
   }
 }
 
@@ -968,6 +1112,23 @@ body.is-lock {
 
   .cta__image {
     left: -80px;
+  }
+
+  .logo__svg-footer {
+    width: 12.5rem;
+    height: 5.75rem;
+  }
+
+  .footer__top {
+    flex-direction: column;
+  }
+
+  .footer__bottom {
+    column-gap: 2rem;
+  }
+
+  .footer__menu-list {
+    column-gap: 4.4rem;
   }
 }
 
@@ -1109,6 +1270,29 @@ body.is-lock {
 
   .cta__form-wrapper {
     justify-content: center;
+  }
+
+  .footer__top {
+    padding-block: 4.5rem;
+    row-gap: 2.7rem;
+  }
+
+  .footer__address,
+  .footer__contacts {
+    flex-direction: column;
+    row-gap: 1.2rem;
+  }
+
+  .footer__bottom {
+    justify-content: center;
+  }
+
+  .footer__menu-list {
+    grid-auto-flow: row;
+  }
+
+  .footer__menu--2cols {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -1289,6 +1473,47 @@ body.is-lock {
   .notify {
     column-gap: 12px;
   }
+
+  .logo__svg-footer {
+    width: 13.4rem;
+    height: 4.1rem;
+  }
+
+  .footer__top {
+    padding-block: 4.5rem 2.6rem;
+    row-gap: 2.7rem;
+  }
+
+  .footer__phone {
+    font-size: 28px;
+  }
+
+  .footer__text {
+    font-size: 14px;
+  }
+
+  .footer__bottom {
+    justify-content: start;
+    padding-block: 2.8rem 0.6rem;
+  }
+  .footer__menu-title,
+  .footer__menu-link {
+    font-size: 14px;
+  }
+  .footer__menu-title {
+    margin-bottom: 1.4rem;
+  }
+
+  .footer__menu-wrapper:last-child {
+    margin-inline-start: 0;
+  }
+
+  .footer__wrapper,
+  .footer__legal {
+    flex-direction: column;
+   row-gap: 1rem;
+    align-items: start;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1391,7 +1616,28 @@ body.is-lock {
     font-size: 14px;
   }
 
-  /* .cta {
-  padding-inline: 15px;
-} */
+  .footer__top,
+  .footer__address,
+  .footer__contacts {
+    align-items: start;
+    font-size: 14px;
+  }
+
+  .footer__bottom {
+    flex-direction: column;
+  }
+
+  .footer__menu-list {
+    padding-left: 1.6rem;
+    row-gap: 0.9rem;
+  }
+
+  .footer__menu-wrapper {
+    margin-block-end: 26px;
+  }
+
+  .footer__menu-list--bold {
+    padding-inline-start: 0;
+    row-gap: 2.6rem;
+  }
 }
