--- a/styles/index.css
+++ b/styles/index.css
@@ -136,8 +136,6 @@ body {
   text-decoration: none;
 }
 
-
-
 .logo__image {
   width: 9rem;
   height: 2.75rem;
@@ -421,14 +419,15 @@ body.is-lock {
 .mobile__menu-link {
   color: inherit;
   text-decoration: none;
+
 }
 
 .mobile__submenu-list {
   display: flex;
   flex-direction: column;
   padding-inline: 20px;
-  margin-inline-start: 20px;
   row-gap: 10px;
+    margin-block-start: 20px;
 }
 
 .mobile__submenu-item {
@@ -1417,6 +1416,15 @@ color: #5c8ee5;
   .modal__dialog {
     padding: 2.5rem 2.7rem;
   }
+
+    .blog-card__title {
+    font-size: 20px;
+    line-height: 1.2;
+  }
+  
+  .blog-card__description {
+    font-size: 14px;
+  }
 }
 
 /* 768pxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
@@ -1523,14 +1531,14 @@ color: #5c8ee5;
     font-size: 14px;
   }
 
-  .blog-card__title {
+  /* .blog-card__title {
     font-size: 20px;
     line-height: 1.2;
-  }
+  } */
 
-  .blog-card__description {
+  /* .blog-card__description {
     font-size: 14px;
-  }
+  } */
 
   .blog-card__footer {
     margin-block-start: 1.6rem;
@@ -1549,7 +1557,7 @@ color: #5c8ee5;
   .cta__form-footer {
     align-items: center;
     flex-direction: column;
-    row-gap: 1.875rem;
+   row-gap: 2.5rem;
   }
 
   .button--cta {
@@ -1651,11 +1659,7 @@ color: #5c8ee5;
     font-size: 14px;
     margin-bottom: 20px;
   }
-
-  .cta__form-footer {
-    row-gap: 1.7rem;
-  }
-
+  
   .modal__close-button {
     top: 35px;
     right: 31px;
